# sherbert

./: Cargo.toml
files/: 404.md  footer.html  header.html  index.md  rocks.md  template.html
files/blog/: 01-hiatus.md  02-matrix.md  03-geometry.md  04-helium.md  05-bloat.md  index.md
files/docs/: spec.md
files/projects/: index.md
files/projects/shard/: docs.md  examples.md  index.md
files/style/: style.css
files/style/themes/: mustard.css
files/templates/: article.html  default.html  master.html
src/: generate.rs  host.rs  main.rs
src/generate/: mod.rs  parser.rs  syntax.rs
