[package]
name = "sherbert"
version = "0.1.0"
edition = "2024"
authors = ["slbsh"]
license = "0BSD"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

# host
foxhole = { git = "https://github.com/nh3dev/foxhole" }
mime_guess = "2.0"

# generate
comrak = { version = "0.39", default-features = false, features = ["syntect"] }
toml = "1.1"
regex = "1.11" # maybe unnecessary
syntect = "5.2"
walkdir = "2.5"
katex-rs = "0.2"
chrono = "^0.4.43"

[profile.release]
lto = true
panic = "abort"
opt-level = "s"
debug = false
codegen-units = 1
